Fixed an issue where snackbar was hidden behind form elements.

--- a/src/styles/_snackbar.scss
+++ b/src/styles/_snackbar.scss
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   transition: all 0.5s ease-in-out;
+  z-index: 1000;
 
   .snackbar-inner{
     max-width: 600px;
